update projectlinks and one featured project

--- a/index.html
+++ b/index.html
@@ -224,11 +224,11 @@
         </div>
       </a>
       
-      <a data-aos="fade-up-left" rel='noreferrer' target='_blank' class="card" href="https://boosting.ai/">
-        <div class="card__background" data-src="/assets/project-boostingAI.webp"></div>
+      <a data-aos="fade-up-left" rel='noreferrer' target='_blank' class="card" href="https:/startingup.ai/">
+        <div class="card__background" data-src="/assets/startingupai.png"></div>
         <div class="card__content">
            <p data-tooltip="This was a paid project that uses AI. I made the underlying framework for it." class="card__category">Paid project &#x2022; AI</p>
-           <h3 title="Source code is not public" class="card__heading">Boosting.ai</h3>
+           <h3 title="Source code is not public" class="card__heading">Startingup.ai</h3>
         </div>
       </a>
       
